--- a/about.htm
+++ b/about.htm
@@ -36,7 +36,7 @@ img.mine {
 
 <div class="content">
 	<h2>A Short Biography of Who Am I</h2>
-    		<p><img class="mine" src="cheryl small.png" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:280px;height:300px;margin-right:20px;">Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
+    		<p><img class="mine" src="cheryl (small).png" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:280px;height:300px;margin-right:20px;">Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
 <br><br>
 When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
 <br><br>
