--- a/about.htm
+++ b/about.htm
@@ -41,19 +41,24 @@ img.chil {
 <div class="content">
 	<h2>A Short Biography of Who Am I</h2>
     		<p><img class="mine" src="cheryl (small).png" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:250px;height:260px;margin-right:20px;">Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
-<br><br>
-When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
-<br><br>
+	</p>
+<p>When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
+</p>
+<p>
 I was 9 years old when I first encountered God. Our Sunday school teacher said God can be our friend. And I want a friend like God, so I asked Him to be my best friend.
 <br><br>
 October 31, 1999 - I have met an accident. My life drastically changes, and it makes a 180-degree turn. I am caught by surprise and I did not welcome it with an open arm. Because I do not want anyone to feel sorry for me, I wore a mask to hide what is I truly feel inside.
-<br><br>
+</p>
+<p>
 After 11 months our mom died. She left us, me and my other three younger siblings, to the care of our Ate (older sister) Joy. At a young age, she took the responsibility of raising us, sending us to school, paying bills, and taking good care of us. My Ate (older sister) is the first person I admire.
-<br><br><img class="chil" src="children.jpg" alt="Cheryl teaching kids during Vacation Bible School" style="width:300px;height:200px;margin-right:20px;">
+</p>
+<p><img class="chil" src="children.jpg" alt="Cheryl teaching kids during Vacation Bible School" style="width:300px;height:200px;margin-right:20px;">
 2003, my Ate Joy approached me and asked me if I wanted to teach children in our Sunday school. But I declined her because I thought I am not fit for the job. I am not patient with kids. I easily get irritated when someone is so loud. But God called me. And after more than a decade, I am still teaching kids. He fully equipped me to do the job.
-<br><br>
+</p>
+<p>
 Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
-<br><br>
+</p>
+<p style="text-align:center">
 The reason for my existence is God and God alone.
 </p>
 </div>
