--- a/about.htm
+++ b/about.htm
@@ -58,8 +58,8 @@ After 11 months our mom died. She left us, me and my other three younger sibling
 <p>
 Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
 </p>
-<p style="text-align:center">
-The reason for my existence is God and God alone.
+<p style="text-align:center"><strong>
+	The reason for my existence is God and God alone.</strong>
 </p>
 </div>
 
