--- a/about.htm
+++ b/about.htm
@@ -47,19 +47,19 @@ img.chil {
 <p>
 I was 9 years old when I first encountered God. Our Sunday school teacher said God can be our friend. And I want a friend like God, so I asked Him to be my best friend.
 <br><br>
-October 31, 1999 - I have met an accident. My life drastically changes, and it makes a 180-degree turn. I am caught by surprise and I did not welcome it with an open arm. Because I do not want anyone to feel sorry for me, I wore a mask to hide what is I truly feel inside.
+October 31, 1999 - I have met an accident. My life drastically changes, and it makes a 180-degree turn. I am caught by surprise and I did not welcome it with an open arm. Because I do not want anyone to feel sorry for me so I wore a mask to hide what I truly feel inside.
 </p>
 <p>
 After 11 months our mom died. She left us, me and my other three younger siblings, to the care of our Ate (older sister) Joy. At a young age, she took the responsibility of raising us, sending us to school, paying bills, and taking good care of us. My Ate (older sister) is the first person I admire.
 </p>
 <p><img class="chil" src="children.jpg" alt="Cheryl teaching kids during Vacation Bible School" style="width:300px;height:200px;margin-right:20px;">
-2003, my Ate Joy approached me and asked me if I wanted to teach children in our Sunday school. But I declined her because I thought I am not fit for the job. I am not patient with kids. I easily get irritated when someone is so loud. But God called me. And after more than a decade, I am still teaching kids. He fully equipped me to do the job.
+2003, my Ate Joy approached me and asked me if I wanted to teach children in our Sunday school but, I declined her because I thought I am not fit for the job. I am not patient with kids. I easily get irritated when someone is so loud. But God called me. And after more than a decade, I am still teaching kids. He fully equipped me to do the job.
 </p>
 <p>
 Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
 </p>
-<p style="text-align:center"><strong>
-	The reason for my existence is God and God alone.</strong>
+<p style="text-align:center">
+The reason for my existence is God and God alone.
 </p>
 </div>
 
