--- a/contact.htm
+++ b/contact.htm
@@ -31,7 +31,8 @@
 
 <div class="content">
 <fieldset>
-	<legend style="color:black">Personal Data</legend>
+	<legend style="color:black">Form</legend>
+	<p>If I can be of assistance, please do not hesitate to contact me.</p>
 	Complete Name:<br>
 	<input type="text" name="fname" placeholder="Enter your Full Name" size="100px"><br>
 <form>
