--- a/power.htm
+++ b/power.htm
@@ -3,9 +3,10 @@
 <html lang="en">
 <head>
 <title>CHERYL REPAL</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 <body>
 <div class="header">
@@ -104,23 +105,6 @@
 
 <a class="sm" href="https://www.facebook.com/cherylm.repal/">
 <i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
-</a>
-
-<a class="sm" href="https://www.instagram.com/cherylmrepal/">
-  <i class="fa fa-instagram"><span class="sr-only"> Cheryl's Instagram Account</span></i>
-</a>
-
-<a class="sm" href="https://www.twitter.com/cherylmrepal/">
-  <i class="fa fa-twitter"><span class="sr-only">Cheryl's Twitter Account</span></i>
-</a>
-
-<a class="sm" href="https://www.linkedin.com/in/cherylrepal/">
-  <i class="fa fa-linkedin"><span class="sr-only"> Cheryl's LinkedIn Account</span></i>
-</a>
-		<br>Cheryl Repal  | Copyright 2021
-	 </p>
-</footer><a class="sm" href="https://www.facebook.com/cherylm.repal/">
- <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
 </a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
