--- a/about.htm
+++ b/about.htm
@@ -14,6 +14,19 @@ img.mine {
 img.chil {
 	float: left;
 }
+
+.button {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+	
 </style>
 </head>
 
@@ -61,6 +74,9 @@ Through the years, God has been graciously showered me with so much blessing. He
 <p style="text-align:center">
 The reason for my existence is God and God alone.
 </p>
+
+<a href="child.htm" class="button">Children Ministry</a>
+<a href="child.htm" class="button">Children Ministry</a>
 </div>
 
 <div class="footer">
