--- a/about.htm
+++ b/about.htm
@@ -16,16 +16,17 @@ img.chil {
 }
 
 .button {
-  background-color: black;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+	background-color: black;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 8px;
 	
 </style>
 </head>
@@ -76,7 +77,7 @@ The reason for my existence is God and God alone.
 </p>
 
 <a href="child.htm" class="button">Children Ministry</a>
-<a href="child.htm" class="button">Children Ministry</a>
+<a href="music.htm" class="button">Favorite Music</a>
 </div>
 
 <div class="footer">
