--- a/about.htm
+++ b/about.htm
@@ -59,8 +59,8 @@ After 11 months our mom died. She left us, me and my other three younger sibling
 Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
 </p>
 <p style="text-align:center">
-	<a href="children.htm" alt="link to Why I love Children Ministry">Why I love Chlidren Ministry<a>
-	<a href="music.htm" alt="link to My Favorite Music"> My Favorite Music</a>
+	<a href="children.htm" alt="link to Why I love Children Ministry">Why I love Chlidren Ministry<a> &nbsp;
+	<a href="music.htm" alt="link to My Favorite Music"> My Favorite Music</a> &nbsp;
 	<a href="people.htm" alt="link to People Who Inspire Me">People Who Inspire Me</a>
 </p>
 </div>
