--- a/about.htm
+++ b/about.htm
@@ -60,6 +60,12 @@ Through the years, God has been graciously showered me with so much blessing. He
 </p>
 </div>
 
+<div style="align:center">
+<p >Know more about me here:</p>
+<a href="children.htm" alt="link going to the reason why I'm in the Children's Ministry Page">Reason Why I'm in The Children's Ministry</a> &nbsp;
+<a href="music.htm" alt="link going to My Favorite Songs Page">My Favorite Songs</a> &nbsp;
+<a href="person.htm" alt="link going to People I admire Page">People I admire</a> &nbsp;
+</div>
 
 <div class="footer">
 <footer>
