--- a/children.htm
+++ b/children.htm
@@ -40,28 +40,28 @@
 
 <div class="responsive"> 
 <div class="gallery"> 
-<a href="children1.jpg"> <img src="children1.jpg" alt="Cheryl teaching kids in Navotas year 2018"> </a> 
+<a href="Children1.jpg"> <img src="Children1.jpg" alt="Cheryl teaching kids in Navotas year 2018"> </a> 
 <div class="desc">VBS 2018 Day 2</div> 
 </div>
 </div> 
 
 <div class="responsive"> 
 <div class="gallery"> 
-<a href="children2.jpg"> <img src="children2.jpg" alt="Cheryl teaching kids in Navotas year 2018"> </a> 
+<a href="Children2.jpg"> <img src="Children2.jpg" alt="Cheryl teaching kids in Navotas year 2018"> </a> 
 <div class="desc">VBS 2018 Day 4</div> 
 </div>
 </div> 
 
 <div class="responsive"> 
 <div class="gallery"> 
-<a href="children4.jpg"> <img src="children4.jpg" alt="Cheryl teaching kids in Navotas year 2019"> </a> 
+<a href="Children4.jpg"> <img src="Children4.jpg" alt="Cheryl teaching kids in Navotas year 2019"> </a> 
 <div class="desc">VBS 2019 Day 2</div> 
 </div>
 </div> 
 
 <div class="responsive"> 
 <div class="gallery"> 
-<a href="children3.jpg"> <img src="children13.jpg" alt="Cheryl teaching kids in San Rafael Navotas City"> </a> 
+<a href="Children3.jpg"> <img src="Children3.jpg" alt="Cheryl teaching kids in San Rafael Navotas City"> </a> 
 <div class="desc">Mission sa Tawid Outreach</div> 
 </div>
 </div> 
