--- a/children.htm
+++ b/children.htm
@@ -28,7 +28,7 @@
 </div> 
 
 <div class="content">
-<h2>The reason why I'm in the Children's Ministry</h2> 
+<h2>Why I'm in the Children's Ministry</h2> 
 <p>Teaching kids is a tough job. It requires a lot of patient, passion, and understanding. But when you teach children in a Sunday School context, you have to exercise utmost patient, care, passion, and understanding.</p>
 <p>We all know it is innate to kids to be super hyper, extremely noisy, and super talkative. Most of the time they ask a lot of questions that test our patience. They quarrel even with the smallest thing you could ever imagine.</p>
 <p>Looking back, I never see myself teaching kids. Aside from I don't have teaching training, I hate noisy people. I am impatient and cannot stand being with a talkative person even just for a minute. So it's still a mystery how God chose an unlikely person like me to teach children.</p>
@@ -36,34 +36,6 @@
 <p>And through the years, God had proven and still proving to me that every alibis, every excuses, every reasoning didn't matter when He calls you. Because He will surely empower you. He will give you strength to do the task. He will surely supply everything that is lacking to you. He will change you to be the person that is fitting to the ministry He entrusted  you. He will surely be with you, even unto the end of the world.</p>
 <p>To God be the glory forever and ever. Amen
 </p>
-</div> 
-
-<div class="responsive"> 
-<div class="gallery"> 
-<a href="Children1.jpg"> <img src="Children1.jpg" alt="Cheryl teaching kids in Navotas year 2018"> </a> 
-<div class="desc">VBS 2018 Day 2</div> 
-</div>
-</div> 
-
-<div class="responsive"> 
-<div class="gallery"> 
-<a href="Children2.jpg"> <img src="Children2.jpg" alt="Cheryl teaching kids in Navotas year 2018"> </a> 
-<div class="desc">VBS 2018 Day 4</div> 
-</div>
-</div> 
-
-<div class="responsive"> 
-<div class="gallery"> 
-<a href="Children4.jpg"> <img src="Children4.jpg" alt="Cheryl teaching kids in Navotas year 2019"> </a> 
-<div class="desc">VBS 2019 Day 2</div> 
-</div>
-</div> 
-
-<div class="responsive"> 
-<div class="gallery"> 
-<a href="Children3.jpg"> <img src="Children3.jpg" alt="Cheryl teaching kids in San Rafael Navotas City"> </a> 
-<div class="desc">Mission sa Tawid Outreach</div> 
-</div>
 </div> 
 
 <div class="footer">
