--- a/children.htm
+++ b/children.htm
@@ -34,7 +34,19 @@
 <p>Looking back, I never see myself teaching kids. Aside from I don't have teaching training, I hate noisy people. I am impatient and cannot stand being with a talkative person even just for a minute. So it's still a mystery how God chose an unlikely person like me to teach children.</p>
 <p>When God called me, I wrestled with God and gave Him a lot of excuses just like Moses did. I said I don't know how to teach, I am impatient,  I am a bad person, my feet are weak, and so on. With all of that excuses, God only give me one answer - I am calling you!</p>
 <p>And through the years, God had proven and still proving to me that every alibis, every excuses, every reasoning didn't matter when He calls you. Because He will surely empower you. He will give you strength to do the task. He will surely supply everything that is lacking to you. He will change you to be the person that is fitting to the ministry He entrusted  you. He will surely be with you, even unto the end of the world.</p>
-<p>To God be the glory forever and ever. Amen
+<p>As I'm teaching, God make me realized how important Children's Ministry today and in the future.</p>
+  <h3>Reason Why Children Ministry is Important</h3>
+  <h4>Children Matter to God</h4>
+  <p>Jesus loves the little children. He made clear that they are all matter to God. He told the disciples not to hinders them to come near Him. He even recommended them to learn from the children and receive the kingdom of God like a little child.</p>
+  <h4>Children Need to Learn About God</h4>
+  <p>Just like adult, children need to learn about God. They need to know how vast God's love for them. They need to know that Jesus came on earth to die on the cross to save every sinners who will believe in His Word, works, and His resurrection. Because like adult, they have a soul that need to be saved.</p>
+  <h4>God Commanded It</h4>
+  <p>God commanded us to teach His Word to children. From Old Testament to the New Testament, the Bible is clear that every Christian has the obligation to bring children to a close relationship with God.</p>
+  <p><i>Hear, O Israel: The Lord our God, the Lord is one. Love the Lord your God with all your heart and with all your soul and with all your strength. These commandments that I give you today are to be on your hearts. Impress them on your children. Talk about them when you sit at home and when you walk along the road, when you lie down and when you get up. Tie them as symbols on your hands and bind them on your foreheads. Write them on the doorframes of your houses and on your gates.</i> – Deuteronomy 6:4-9</p>
+  <p><i>Train up a child in the way he should go; even when he is old he will not depart from it.</i> - Proverbs 22:6</p>
+  <h4>It Provides for The Future</h4>
+  <p>Children is God's avenue of passing on the faith. Children are part of God's plan for His church and we are to embrace them in the same way that He has embraced us in His great love and grace. It will also plays a big part in the future of our community, if we want a Godly community in the future we must begin to mold Godly children now.</p>
+  <p style="align:center"><b>To God be the glory forever and ever. Amen</b>
 </p>
 </div> 
 
