--- a/children.htm
+++ b/children.htm
@@ -16,7 +16,7 @@
 <ul>
 <li><a class="active" href="about.htm">About Me</a></li>
 <li><a href="contact.htm">Contacts</a></li>
-<li><a href="graphics.htm"> Skills </a><ul class="dropdown">
+<li><a href="graphics.htm">Graphics</a><ul class="dropdown">
 <li><a href="adobe.htm">Photoshop Graphics</a></li>
 <li><a href="power.htm">Powerpoint Graphics</a></li>
 <li><a href="canva.htm">Canva Graphics</a></li>
