--- a/about.htm
+++ b/about.htm
@@ -27,7 +27,7 @@ img.chil {
 <ul>
 	<li><a class="active" href="about.htm">About Me</a></li>
 	<li><a href="contact.htm">Contacts</a></li>
-	<li><a href="graphics.htm"> Skills </a>
+	<li><a href="graphics.htm">Graphics</a>
 		<ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
