--- a/music.htm
+++ b/music.htm
@@ -33,22 +33,29 @@
 <p>We all know that music is the language of the soul. It reaches out and expresses what words are unable to say. Whatever experiences a person may be going through, whether it is a heartbreak or unspeakable joy, can be expressed through music. The melodies are able to convey messages, soul to soul.  It is powerful enough to soften the hardest heart and heal the most painful memory. It breaks barriers of time and space, provides comfort for the grieving, and calms the anxious mind.</p>
 <p>Here are the music that give me peace when I am anxious, give me joy when I am sad, give me hope and help me believe again when I feel that everything seems had fall into pieces.</p>
  
-	<p>Through it all - Hillsong</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/UfAj_l1bLlQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p> Grace - Laura Story</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/sL1DNipyurM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p> Lead Me Lord - Gary Valenciano</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/sL1DNipyurM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<div align="center"><p>Through it all - Hillsong</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/UfAj_l1bLlQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center"><p> Grace - Laura Story</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sL1DNipyurM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
+	<p> Lead Me Lord - Gary Valenciano</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sL1DNipyurM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
 	<p> Blessing - Laura Story</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p> The Warrior is a Child - Gary Valenciano</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/nBE3W857--4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p>When We get to Heaven</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/qwpTceQfqGw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p>Because He Lives</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/oPW9xYEyijQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p>I Offer My Life - Don Moen</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/c-rntNG0xm0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
+	<p> The Warrior is a Child - Gary Valenciano</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/nBE3W857--4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
+	<p>When We get to Heaven</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/qwpTceQfqGw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
+	<p>Because He Lives</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/oPW9xYEyijQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
+	<p>I Offer My Life - Don Moen</p><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/c-rntNG0xm0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div align="center">
 
   </div>
 		
