--- a/music.htm
+++ b/music.htm
@@ -33,30 +33,8 @@
 <p>We all know that music is the language of the soul. It reaches out and expresses what words are unable to say. Whatever experiences a person may be going through, whether it is a heartbreak or unspeakable joy, can be expressed through music. The melodies are able to convey messages, soul to soul.  It is powerful enough to soften the hardest heart and heal the most painful memory. It breaks barriers of time and space, provides comfort for the grieving, and calms the anxious mind.</p>
 <p>Here are the music that give me peace when I am anxious, give me joy when I am sad, give me hope and help me believe again when I feel that everything seems had fall into pieces.</p>
  
-<div style=”float:left;width:auto;margin-right:14px;”><p style="text-align:center;">Through it all - Hillsong</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/UfAj_l1bLlQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	 
-	<div style=”float:right;width:auto;margin-right:14px;”><p> Grace - Laura Story</p><br>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/sL1DNipyurM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><div style=”clear:both;height:1em;”></div>
-	
-	<div style=”float:left;width:auto;margin-right:14px;”><p> Lead Me Lord - Gary Valenciano</p><br>
- <div style=”float:left;width:auto;margin-right:14px;”><iframe width="560" height="315" src="https://www.youtube.com/embed/sL1DNipyurM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	
-	<div style=”float:right;width:auto;margin-right:14px;”><p> Blessing - Laura Story</p>
+	<div style=”align:center;”><p> Blessing - Laura Story</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	
-	<div style=”float:left;width:auto;margin-right:14px;”><p> The Warrior is a Child - Gary Valenciano</p><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/nBE3W857--4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-	<div style=”float:right;width:auto;margin-right:14px;”><p>When We get to Heaven</p><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/qwpTceQfqGw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-	<div style=”float:left;width:auto;margin-right:14px;”><p>Because He Lives</p><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/oPW9xYEyijQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-	<div style=”float:right;width:auto;margin-right:14px;”><p>I Offer My Life - Don Moen</p><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/c-rntNG0xm0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-	<div align="center">
 
   </div>
 		
