--- a/music.htm
+++ b/music.htm
@@ -33,8 +33,8 @@
 <p>We all know that music is the language of the soul. It reaches out and expresses what words are unable to say. Whatever experiences a person may be going through, whether it is a heartbreak or unspeakable joy, can be expressed through music. The melodies are able to convey messages, soul to soul.  It is powerful enough to soften the hardest heart and heal the most painful memory. It breaks barriers of time and space, provides comfort for the grieving, and calms the anxious mind.</p>
 <p>Here are the music that give me peace when I am anxious, give me joy when I am sad, give me hope and help me believe again when I feel that everything seems had fall into pieces.</p>
  
-	<div style=”align:center;”><p> Blessing - Laura Story</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<p style="text-align:center;"> Blessing - Laura Story</p>
+  <div style=”align:center;”><iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
   </div>
 		
