--- a/about.htm
+++ b/about.htm
@@ -63,7 +63,7 @@ Through the years, God has been graciously showered me with so much blessing. He
 <div>
 	<p style="text-align:center">Know me more here:<br>
 		<a href="children.htm" alt="link to Why I'm In the Children Ministry">Why I'm in the Children Ministry<a> &nbsp; 
-		<a href="music.htm" alt="link to My Favorite Music"> My Favorite Music</a>; 
+		<a href="music.htm" alt="link to My Favorite Music"> My Favorite Music</a> 
 	</p>
 </div>
 		
