--- a/children.htm
+++ b/children.htm
@@ -37,15 +37,15 @@
 <p>As I'm teaching, God make me realized how important Children's Ministry today and in the future.</p>
   <br>
   <h3 style="text-align:center;">Reason Why Children Ministry is Important</h3>
-  <p><b>Children Matter to God</b></p>
+  <br><p><b>Children Matter to God</b></p>
   <p>Jesus loves the little children. He made clear that they are all matter to God. He told the disciples not to hinders them to come near Him. He even recommended them to learn from the children and receive the kingdom of God like a little child.</p>
-  <p><b>Children Need to Learn About God</b></p>
+  <br><p><b>Children Need to Learn About God</b></p>
   <p>Just like adult, children need to learn about God. They need to know how vast God's love for them. They need to know that Jesus came on earth to die on the cross to save every sinners who will believe in His Word, works, and His resurrection. Because like adult, they have a soul that need to be saved.</p>
-  <p><b>God Commanded It</b></p>
+  <br><p><b>God Commanded It</b></p>
   <p>God commanded us to teach His Word to children. From Old Testament to the New Testament, the Bible is clear that every Christian has the obligation to bring children to a close relationship with God.</p>
-  <p style="font-size:17px; text-align:center;"><i>Hear, O Israel: The Lord our God, the Lord is one. Love the Lord your God with all your heart and with all your soul and with all your strength. These commandments that I give you today are to be on your hearts. Impress them on your children. Talk about them when you sit at home and when you walk along the road, when you lie down and when you get up. Tie them as symbols on your hands and bind them on your foreheads. Write them on the doorframes of your houses and on your gates.</i> – Deuteronomy 6:4-9</p>
-  <p style="font-size:17px; text-align:center;"><i>Train up a child in the way he should go; even when he is old he will not depart from it.</i> - Proverbs 22:6</p>
-  <p><b>It Provides for The Future</b></p>
+  <p style="font-size:17px; text-align:center;"><i>Hear, O Israel: The Lord our God, the Lord is one. Love the Lord your God with all your heart and with all your soul and with all your strength. These commandments that I give you today are to be on your hearts. Impress them on your children. Talk about them when you sit at home and when you walk along the road, when you lie down and when you get up. Tie them as symbols on your hands and bind them on your foreheads. Write them on the doorframes of your houses and on your gates.</i> <b>– Deuteronomy 6:4-9<b></p>
+  <p style="font-size:17px; text-align:center;"><i>Train up a child in the way he should go; even when he is old he will not depart from it.</i> <b>- Proverbs 22:6<b></p>
+  <br><p><b>It Provides for The Future</b></p>
   <p>Children is God's avenue of passing on the faith. Children are part of God's plan for His church and we are to embrace them in the same way that He has embraced us in His great love and grace. It will also plays a big part in the future of our community, if we want a Godly community in the future we must begin to mold Godly children now.</p>
   <p style="text-align:center;"><b>To God be the glory forever and ever. Amen</b>
 </p>
