--- a/children.htm
+++ b/children.htm
@@ -6,7 +6,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head> 
+<style>
+  #myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+  </style>
+  </head> 
 <body>
 <div class="header">
 <h1>Cheryl Repal</h1>
@@ -49,7 +70,26 @@
     <p>Children is God's avenue of passing on the faith. Children are part of God's plan for His church and we are to embrace them in the same way that He has embraced us in His great love and grace. It will also plays a big part in the future of our community, if we want a Godly community in the future we must begin to mold Godly children now.</p>
   <p style="text-align:center;"><b>To God be the glory forever and ever. Amen</b>
 </p>
-</div> 
+</div>
+  
+<script>
+var mybutton = document.getElementById("myBtn");
+
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
 
 <div class="footer">
 <footer>
