--- a/children.htm
+++ b/children.htm
@@ -71,6 +71,17 @@
   <p style="text-align:center;"><b>To God be the glory forever and ever. Amen</b>
 </p>
 </div>
+ 
+  <div>
+	<p">Here are the other songs I love<br>
+	<a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a> &nbsp; 
+  <a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a> &nbsp; 
+	<a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a> &nbsp;
+  <a href="https://youtu.be/qwpTceQfqGw" alt="youtube link to When We All Get to Heaven">When We All Get to Heaven<a> &nbsp;
+  <a href="https://youtu.be/bw51VmZGCE4" alt="youtube link to When Because He Lives">Because He Lives<a> &nbsp;
+  <a href="https://youtu.be/OKHZRMN1E0M" alt="youtube link to I Know Who Holds Tomorrow">I Know Who Holds Tomorrow</a> 
+	</p>
+</div>
   
 <script>
 var mybutton = document.getElementById("myBtn");
