--- a/children.htm
+++ b/children.htm
@@ -6,27 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  #myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: #555;
-}
-  </style>
   </head> 
 <body>
 <div class="header">
@@ -73,35 +52,15 @@
 </div>
  
   <div>
-	<p">Here are the other songs I love<br>
-	<a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a> &nbsp; 
-  <a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a> &nbsp; 
-	<a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a> &nbsp;
-  <a href="https://youtu.be/qwpTceQfqGw" alt="youtube link to When We All Get to Heaven">When We All Get to Heaven<a> &nbsp;
-  <a href="https://youtu.be/bw51VmZGCE4" alt="youtube link to When Because He Lives">Because He Lives<a> &nbsp;
-  <a href="https://youtu.be/OKHZRMN1E0M" alt="youtube link to I Know Who Holds Tomorrow">I Know Who Holds Tomorrow</a> 
-	</p>
+	  <p>Here are the other songs I love</p>
+		<p><a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a></p>
+  		<p><a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a></p>
+		<p><a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a></p>
+  		<p><a href="https://youtu.be/qwpTceQfqGw" alt="youtube link to When We All Get to Heaven">When We All Get to Heaven<a></p>
+  		<p><a href="https://youtu.be/bw51VmZGCE4" alt="youtube link to When Because He Lives">Because He Lives<a></p>
+  		<p><a href="https://youtu.be/OKHZRMN1E0M" alt="youtube link to I Know Who Holds Tomorrow">I Know Who Holds Tomorrow</a></p>
 </div>
   
-<script>
-var mybutton = document.getElementById("myBtn");
-
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
-
 <div class="footer">
 <footer>
 <p class="foot">
