--- a/music.htm
+++ b/music.htm
@@ -28,6 +28,7 @@
 	<li><a href="index.htm"> Home </a></li>
 </ul>
 </div>
+	
 <div class="content">
 	<h2>My Favorite Music</h2>
 <p>We all know that music is the language of the soul. It reaches out and expresses what words are unable to say. Whatever experiences a person may be going through, whether it is a heartbreak or unspeakable joy, can be expressed through music. The melodies are able to convey messages, soul to soul.  It is powerful enough to soften the hardest heart and heal the most painful memory. It breaks barriers of time and space, provides comfort for the grieving, and calms the anxious mind.</p>
@@ -35,8 +36,17 @@
  
 	<p style="text-align:center;"><b> Blessing - Laura Story</b></p>
   <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-  </div>
+<div>
+	  <p>Here are the other songs I love</p>
+		<p><a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a></p>
+  		<p><a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a></p>
+		<p><a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a></p>
+  		<p><a href="https://youtu.be/qwpTceQfqGw" alt="youtube link to When We All Get to Heaven">When We All Get to Heaven<a></p>
+  		<p><a href="https://youtu.be/bw51VmZGCE4" alt="youtube link to When Because He Lives">Because He Lives<a></p>
+  		<p><a href="https://youtu.be/OKHZRMN1E0M" alt="youtube link to I Know Who Holds Tomorrow">I Know Who Holds Tomorrow</a></p>
+</div>
+			
+</div>
 		
 <div class="footer">
 <footer>
