--- a/music.htm
+++ b/music.htm
@@ -36,8 +36,8 @@
  
 	<p style="text-align:center;"><b> Blessing - Laura Story</b></p>
   <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-<div>
-	  <p>Here are the other songs I love</p>
+<div><br>
+	<p><b>Here are the other songs I love</b></p>
 		<p><a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a></p>
   		<p><a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a></p>
 		<p><a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a></p>
