--- a/music.htm
+++ b/music.htm
@@ -6,6 +6,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
 </head>
 
 <body>
@@ -38,12 +55,37 @@
   <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 <div><br>
 	<p><b>Here are the other songs I love</b></p>
-		<p><a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a></p>
-  		<p><a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a></p>
-		<p><a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a></p>
-  		<p><a href="https://youtu.be/qwpTceQfqGw" alt="youtube link to When We All Get to Heaven">When We All Get to Heaven<a></p>
-  		<p><a href="https://youtu.be/bw51VmZGCE4" alt="youtube link to When Because He Lives">Because He Lives<a></p>
-  		<p><a href="https://youtu.be/OKHZRMN1E0M" alt="youtube link to I Know Who Holds Tomorrow">I Know Who Holds Tomorrow</a></p>
+<table>
+  <tr>
+    <th>Christian Songs</th>
+    <th>Othe Songs</th>
+  
+  </tr>
+  <tr>
+    <td><a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a></td>
+    <td><a href="https://youtu.be/IVzw-hM27aw" alt="youtube link to So Many Questions - Side A Band">So Many Questions - Side A Band<a></td>
+  </tr>
+  <tr>
+    <td><a href="https://youtu.be/RrKbu6OwJv0" alt="youtube link to Through It All - Hillsong">Through It All - Hillsong<a></td>
+    <td><a href="https://youtu.be/4EpcSTcJeug" alt="youtube link to Let the Pain Remain - Side A Band">Let the Pain Remain - Side A Band<a></td>
+  </tr>
+  <tr>
+    <td><a href="https://youtu.be/P04DSy7zy90" alt="youtube link to Lead Me Lord - Gary Valenciano">Lead Me Lord - Gary Valenciano<a></td>
+    <td><a href="https://youtu.be/DDyr3DbTPtk" alt="youtube link to MAPA - SB19">MAPA - SB19<a></td>
+  </tr>
+  <tr>
+    <td><a href="https://youtu.be/qwpTceQfqGw" alt="youtube link to When We All Get to Heaven">When We All Get to Heaven<a></td>
+    <td><a href="https://youtu.be/sCQqXGUvCk4" alt="youtube link to ikako - SB19">ikako - SB19<a></td>
+  </tr>
+  <tr>
+    <td><a href="https://youtu.be/bw51VmZGCE4" alt="youtube link to When Because He Lives">Because He Lives<a></td>
+    <td><a href="https://youtu.be/P4BR-Er60yw" alt="youtube link to Go Up - SB19">Go Up - SB19<a></td>
+  </tr>
+  <tr>
+    <td><a href="https://youtu.be/OKHZRMN1E0M" alt="youtube link to I Know Who Holds Tomorrow">I Know Who Holds Tomorrow</a></td>
+    <td><a href="https://youtu.be/OFpVCCzaVwY" alt="youtube link to Somewhere Down The Road - Barry Manilow">Somewhere Down The Road - Barry Manilow<a></td>
+   </tr>
+</table>
 </div>
 			
 </div>
