--- a/music.htm
+++ b/music.htm
@@ -54,7 +54,7 @@ tr:nth-child(even) {
 	<p style="text-align:center;"><b> Blessing - Laura Story</b></p>
   <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 <div><br>
-	<p><b>Here are the other songs I love</b></p>
+	<p style="text-align:center;"><b>Here are the other songs I love</b></p>
 <table>
   <tr>
     <th>Christian Songs</th>
