--- a/music.htm
+++ b/music.htm
@@ -55,11 +55,11 @@ tr:nth-child(even) {
 	<p style="text-align:center;"><b> Blessing - Laura Story</b></p>
   <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XQan9L3yXjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 <div><br>
-	<p style="text-align:center;"><b>Here are the other songs I love</b></p>
+	<p style="text-align:center;"><b>HERE ARE THE OTHER SONGS I LOVE</b></p>
 <table>
   <tr>
     <th>Christian Songs</th>
-    <th>Othe Songs</th>
+    <th>Contemporary Songs</th>
   
   </tr>
   <tr>
