--- a/music.htm
+++ b/music.htm
@@ -7,9 +7,12 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+a:link {
+  text-decoration: none;
+}
+	
 table {
   font-family: arial, sans-serif;
-  text-decoration: none;
   border-collapse: collapse;
   width: 100%;
 }
