--- a/music.htm
+++ b/music.htm
@@ -61,8 +61,8 @@ tr:nth-child(even) {
 	<p style="text-align:center;"><b>HERE ARE THE OTHER SONGS I LOVE</b></p>
 <table>
   <tr>
-    <th>Christian Songs</th>
-    <th>Contemporary Songs</th>
+    <th style="text-align:center;">Christian Songs</th>
+    <th style="text-align:center;">Contemporary Songs</th>
   
   </tr>
   <tr>
