--- a/contact.htm
+++ b/contact.htm
@@ -31,7 +31,7 @@
 
 <div class="content">
 <fieldset>
-	<legend style="color:black">Please your message here</legend>
+	<legend style="color:black"><b>Please leave your message here</b></legend>
 	<p>If I can be of assistance, please do not hesitate to contact me.</p>
 	Complete Name:<br>
 	<input type="text" name="fname" placeholder="Enter your Full Name" size="100px"><br>
@@ -39,7 +39,7 @@
 	E-mail:<br>
 	<input type="email" name="email" size="100px">
 </form><br>
-	Write your message/s:<br>
+	Write your message:<br>
 	<textarea name="message" rows="10" cols="100%"></textarea><br><br>
 	
 	<input type="submit" value="Submit"><input type="reset">
