--- a/music.htm
+++ b/music.htm
@@ -10,6 +10,12 @@
 a:link {
   text-decoration: none;
 }
+
+a:active {
+  color: black;
+
+a:visited {
+  color: darkgreen;
 	
 table {
   font-family: arial, sans-serif;
