--- a/music.htm
+++ b/music.htm
@@ -66,7 +66,7 @@ tr:nth-child(even) {
   
   </tr>
   <tr>
-    <td><a href="https://youtu.be/XQan9L3yXjc" alt="youtube link to Blessings - Laura Story ">Blessings - Laura Story<a></td>
+    <td><a href="https://youtu.be/fcEIcJX_XUA" alt="youtube link to Grace - Laura Story">Grace - Laura Story<a></td>
     <td><a href="https://youtu.be/IVzw-hM27aw" alt="youtube link to So Many Questions - Side A Band">So Many Questions - Side A Band<a></td>
   </tr>
   <tr>
