--- a/index.htm
+++ b/index.htm
@@ -37,14 +37,16 @@ img.prof {
 </div>
 
 <div class="content">
-<h2>What you are about to see is the life and the work of Cheryl Repal</h2>
-<p> <img class="prof" src="new1.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:400px;margin-right:20px;">Change is inevitable. It is the one thing that never changes in this universe. And sometimes we oppose change because we are afraid of the consequences of that change, but there is nothing we can do about it.
+<h2>How has change impacted my life?</h2>
+<p> <img class="prof" src="new1.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:400px;margin-right:20px;">Change is inevitable. It is the one thing that never changes in the cosmos. Sometimes we reject change because we fear its implications, but we can't help it.
 <br><br>
-It is difficult for me to consider change because I was born normal and safe. Change has made a significant difference in my life. From unlimited to minimal, from 'I can do it alone' to 'can you help me with this?' But I have learned a lot because of it.
+Change may bring about exciting new opportunities, but it also often brings in challenging new realities like the one I am now confronting.
 <br><br>
-When my life changed, I thought was the end. I used to believe that nothing positive ever happened to me, but I was mistaken. My foot strength may have deteriorated, but I have learned that despite my limitations, I can still accomplish things.
+The magnitude of the changes that have occurred in my life is hard for me to fathom. As infinite as possible, down to the absolute minimum. As a result, I went from being an unstoppable force to becoming a captive of my own constraints.
 <br><br>
-My graphic design portfolio, the church I represent, the people that inspire and help me along the way, the training I have attended, the wisdom and expertise I've gained over the years, and a brief biography of my life can all be found here. You will also see the editing software I use.
+However, as I've matured, I've grown to appreciate the fact that, despite change's inevitable negative effects, it also provides us with opportunities to learn and grow.
+<br><br>
+Discover my interest, trainings I've completed, favorite music, and a brief summary of my life on this page. Also included are the technical skills and life lessons I've picked up through the years.
 </p>
 </div>
 
