--- a/adobe.htm
+++ b/adobe.htm
@@ -37,7 +37,7 @@
     <a href="Photo Manipulation (1).jpg">
       <img src="Photo Manipulation (1).jpg" alt="Enchanted Forest with fairy and pixies">
     </a>
-   <div class="desc">Photo Manipulation</div>
+   <div class="desc">Enchanted</div>
  </div>
 </div>
 
@@ -46,7 +46,7 @@
     <a href="Photo Manipulation (2).jpg">
       <img src="Photo Manipulation (2).jpg" alt="Fishes inside a Bulb with reflection Photo Manipulation">
     </a>
-   <div class="desc">Photo Manipulation</div>
+   <div class="desc">Imagination</div>
  </div>
 </div>
 
@@ -55,7 +55,7 @@
     <a href="Photo Manipulation (3).jpg">
       <img src="Photo Manipulation (3).jpg" alt="Fishes inside a Bulb Photo Manipulation">
     </a>
-   <div class="desc">Photo Manipulation</div>
+   <div class="desc">Imagination</div>
  </div>
 </div>
 
@@ -64,7 +64,7 @@
     <a href="Photo Manipulation (4).jpg">
       <img src="Photo Manipulation (4).jpg" alt="Boat in a cup Photo Manipulation">
     </a>
-   <div class="desc">Photo Manipulation</div>
+   <div class="desc">Imagination</div>
  </div>
 </div>
 
