--- a/about.htm
+++ b/about.htm
@@ -39,24 +39,28 @@ img.chil {
 </ul>
 </div>
 <div class="content">
-	<h2>A Short Biography of Who Am I</h2>
-    		<p><img class="mine" src="new2.png" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:250px;height:260px;margin-right:20px;">Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
+	<h2>Who Cheryl is</h2>
+    		<p><img class="mine" src="sisters.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:250px;height:260px;margin-right:20px;">Hi there, I'm Cheryl. To put it simply, my parents are Deolita Moncada and Pablito Repal, and I am their third child. First day of life was on December 15, 1981, in Masbate, Philippines. I have two elder sisters, two younger sisters, and one younger brother.
 	</p>
-<p>When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
-</p>
-<p>
-I was 9 years old when I first encountered God. Our Sunday school teacher said God can be our friend. And I want a friend like God, so I asked Him to be my best friend.
+<p>Because of the impression our Papa had on me as a youngster, I aspired to be a civil engineer. My older sister and I helped our father renovate our family home when we were younger. I learnt and like carpentry because of this. I developed the notion that "I can achieve anything" through this experience. I used to believe that if other people could accomplish it, so could I. As a result, no matter how severe the situation grew, I did not seek assistance from anybody.
 <br><br>
-October 31, 1999 - I have met an accident. My life drastically changes, and it makes a 180-degree turn. I am caught by surprise and I did not welcome it with an open arm. Because I do not want anyone to feel sorry for me so I wore a mask to hide what is I truly feel inside.
-</p>
-<p>
-After 11 months our mom died. She left us, me and my other three younger siblings, to the care of our Ate (older sister) Joy. At a young age, she took the responsibility of raising us, sending us to school, paying bills, and taking good care of us. My Ate (older sister) is the first person I admire.
-</p>
-<p><img class="chil" src="children.jpg" alt="Cheryl teaching kids during Vacation Bible School" style="width:300px;height:200px;margin-right:20px;">
-2003, my Ate Joy approached me and asked me if I wanted to teach children in our Sunday school but, I declined her because I thought I am not fit for the job. I am not patient with kids. I easily get irritated when someone is so loud. But God called me, and after more than a decade, I am still teaching kids. He fully equipped me to do the job.
-</p>
-<p>
-Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
+I was born and raise in a Christian family. Every morning, we read the Bible and pray together as a family. But, getting up so early in the morning is quite difficult. And if we were caught dozing off during family devotions, Mama would give us a sharp pinch in the groin. Therefore, you have no option but to rise. We went to children's Sunday school every Sunday. I came to know Christ as my personal Lord and Savior as a result of it. I was 9 years old when I first encountered God. Our Sunday school instructor taught us that God can be our friend. I wanted a friend like God, so I asked him to be my best friend.
+<br><br>
+The 31st of October, 1999, is a day I will never forget. This was a pivotal day in my life. It completes a complete 180-degree turn. I was taken aback, and I did not greet it with open arms. My feet had both lost their strength. I'm no longer able to walk on my own. I could no longer regulate my urine or bowel movements.  I feel like I lost everything at that moment - my future and my life. But, out of pride, I didn't want anybody to feel sorry for what had happened to me, so I covered my true feelings behind a mask. I constantly put on a happy front, but I'm dying with despair on the inside.
+<br><br>
+After eleven months, our mother died away, adding to my sorrow. My three younger siblings and I were left in the care of our Ate (older sister), Joy. She assumed the burden of parenting us, sending us to school, paying our expenses, and taking care of us at an early age. Ate Joy was the first person I looked up to.
+<br><br>
+<img class="chil" src="children.jpg" alt="Cheryl teaching kids during Vacation Bible School" style="width:300px;height:200px;margin-right:20px;">
+My Ate Joy asked me to teach children in our Sunday school in 2003, but I declined because I did not feel I was competent. I am an introverted person with little compassion for children. When someone is really loud, I am quickly irritated. However, God called me to teach, and I've been doing it for almost two decades now. He gave me everything I needed to do the work.
+<br><br>
+I took an extensive theology education at Freedom School of Theology (FSOT) in 2019. In 2011, I attended BBCA's Manila Campus to get an associate degree in Christian Education. I enrolled in the Bachelor of Secondary Education in Mathematics in 2013 at Global Reciprocal Colleges, but was unable to finish it.
+<br><br>
+My first encounter with graphic design was at our church. I'm responsible for updating our church's bulletin. Initially, I used PowerPoint to create visuals. Later on, I became familiar with Adobe Photoshop. But when I worked as a graphic designer for my sister's small printing shop, I expanded my knowledge in the area.
+<br><br><img class="mine" src="viber.jpg" alt="The DDLS Philippine Team showing their artworks" style="width:300px;height:200px;margin-right:20px;">
+In 2020, my sister's little printing firm was briefly shuttered due to a pandemic. We were completely cash-strapped. It was around this time that I learned about Virtualahan. At first, I was hesitant to enroll because I feared I would not be able to complete the course since I knew nothing about online freelancing. But my friend encouraged me to try it. After all, I have nothing to lose.
+Through Virtualahan, I learned various technical skills. Virtualahan introduced me to Atriev, who taught me how to create a simple website from the ground up. Thanks to Virtualahan, I was also able to join and work in a reputable company, DDLS Philippines.
+<br><br>
+I officially joined DDLS Philippines on July 1, 2022. I have nothing but praise for the organization and my coworkers. Everyone regarded you like a member of a team, a family. They will teach you all you need to know with patience. I am really thrilled and appreciative to be a part of this fantastic organization. I've been working here for about a year, and I look forward to many more years with these lovely individuals.
 </p>
 </div>
 
