--- a/about.htm
+++ b/about.htm
@@ -40,13 +40,13 @@ img.chil {
 </div>
 <div class="content">
 	<h2>Who Cheryl is</h2>
-    		<p><img class="mine" src="sisters.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:200px;margin-right:20px;">Hi there, I'm Cheryl. To put it simply, my parents are Deolita Moncada and Pablito Repal, and I am their third child. First day of life was on December 15, 1981, in Masbate, Philippines. I have two elder sisters, two younger sisters, and one younger brother.
+    		<p><img class="mine" src="sisters.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:250px;height:260px;margin-right:20px;">Hi there, I'm Cheryl. To put it simply, my parents are Deolita Moncada and Pablito Repal, and I am their third child. First day of life was on December 15, 1981, in Masbate, Philippines. I have two elder sisters, two younger sisters, and one younger brother.
 	</p>
 <p>Because of the impression our Papa had on me as a youngster, I aspired to be a civil engineer. My older sister and I helped our father renovate our family home when we were younger. I learnt and like carpentry because of this. I developed the notion that "I can achieve anything" through this experience. I used to believe that if other people could accomplish it, so could I. As a result, no matter how severe the situation grew, I did not seek assistance from anybody.
 <br><br>
-I was born and raise in a Christian family. Every morning, we read the Bible and pray together. But, getting up so early in the morning is quite difficult. And if we were caught dozing off during family devotions, Mama would give us a sharp pinch in the groin. Therefore, you have no option but to rise.
+I was born and raise in a Christian family. Every morning, we read the Bible and pray together as a family. But, getting up so early in the morning is quite difficult. And if we were caught dozing off during family devotions, Mama would give us a sharp pinch in the groin. Therefore, you have no option but to rise.
 <br><br>
-Every Sunday, we attended children's Sunday school. I came to know Christ as my personal Lord and Savior as a result of it. I was 9 years old when I first encountered God. Our Sunday school instructor taught us that God can be our friend. I wanted a friend like God, so I asked him to be my best friend.
+When I was nine years old, God made himself known to me. I still remember what my Sunday school teacher taught us. She said that God can be our friend. And I wanted a friend like God, so I asked him to be my best friend. Through the Sunday school, I first heard the gospel and put my faith in Jesus as my Lord and Savior.
 <br><br>
 The 31st of October, 1999, is a day I will never forget. This was a pivotal day in my life. It completes a complete 180-degree turn. I was taken aback, and I did not greet it with open arms. My feet had both lost their strength. I'm no longer able to walk on my own. I could no longer regulate my urine or bowel movements.  I feel like I lost everything at that moment - my future and my life. But, out of pride, I didn't want anybody to feel sorry for what had happened to me, so I covered my true feelings behind a mask. I constantly put on a happy front, but I'm dying with despair on the inside.
 <br><br>
@@ -58,9 +58,9 @@ My Ate Joy asked me to teach children in our Sunday school in 2003, but I declin
 I took an extensive theology education at Freedom School of Theology (FSOT) in 2019. In 2011, I attended BBCA's Manila Campus to get an associate degree in Christian Education. I enrolled in the Bachelor of Secondary Education in Mathematics in 2013 at Global Reciprocal Colleges, but was unable to finish it.
 <br><br>
 My first encounter with graphic design was at our church. I'm responsible for updating our church's bulletin. Initially, I used PowerPoint to create visuals. Later on, I became familiar with Adobe Photoshop. But when I worked as a graphic designer for my sister's small printing shop, I expanded my knowledge in the area.
-<br><br>
+<br><br><img class="mine" src="viber.jpg" alt="The DDLS Philippine Team showing their artworks" style="width:300px;height:200px;margin-right:20px;">
 In 2020, my sister's little printing firm was briefly shuttered due to a pandemic. We were completely cash-strapped. It was around this time that I learned about Virtualahan. At first, I was hesitant to enroll because I feared I would not be able to complete the course since I knew nothing about online freelancing. But my friend encouraged me to try it. After all, I have nothing to lose.
-<img class="mine" src="viber.jpg" alt="The DDLS Philippine Team showing their artworks" style="width:300px;height:200px;margin-right:20px;">Through Virtualahan, I learned various technical skills. Virtualahan introduced me to Atriev, who taught me how to create a simple website from the ground up. Thanks to Virtualahan, I was also able to join and work in a reputable company, DDLS Philippines.
+Through Virtualahan, I learned various technical skills. Virtualahan introduced me to Atriev, who taught me how to create a simple website from the ground up. Thanks to Virtualahan, I was also able to join and work in a reputable company, DDLS Philippines.
 <br><br>
 I officially joined DDLS Philippines on July 1, 2022. I have nothing but praise for the organization and my coworkers. Everyone regarded you like a member of a team, a family. They will teach you all you need to know with patience. I am really thrilled and appreciative to be a part of this fantastic organization. I've been working here for about a year, and I look forward to many more years with these lovely individuals.
 </p>
