--- a/about.htm
+++ b/about.htm
@@ -59,7 +59,9 @@ I took an extensive theology education at Freedom School of Theology (FSOT) in 2
 <br><br>
 My first encounter with graphic design was at our church. I'm responsible for updating our church's bulletin. Initially, I used PowerPoint to create visuals. Later on, I became familiar with Adobe Photoshop. But when I worked as a graphic designer for my sister's small printing shop, I expanded my knowledge in the area.
 <br><br><img class="mine" src="viber.jpg" alt="The DDLS Philippine Team showing their artworks" style="width:300px;height:200px;margin-right:20px;">
-In 2020, my sister's little printing firm was briefly shuttered due to a pandemic. We were completely cash-strapped. It was around this time that I learned about Virtualahan. At first, I was hesitant to enroll because I feared I would not be able to complete the course since I knew nothing about online freelancing. But my friend encouraged me to try it. After all, I have nothing to lose.
+In 2020, my sister's little printing firm was briefly shuttered due to a pandemic. We were completely cash-strapped.
+<br><br>It was around this time that I learned about Virtualahan. At first, I was hesitant to enroll because I feared I would not be able to complete the course since I knew nothing about online freelancing. But my friend encouraged me to try it. After all, I have nothing to lose.
+<br><br>
 Through Virtualahan, I learned various technical skills. Virtualahan introduced me to Atriev, who taught me how to create a simple website from the ground up. Thanks to Virtualahan, I was also able to join and work in a reputable company, DDLS Philippines.
 <br><br>
 I officially joined DDLS Philippines on July 1, 2022. I have nothing but praise for the organization and my coworkers. Everyone regarded you like a member of a team, a family. They will teach you all you need to know with patience. I am really thrilled and appreciative to be a part of this fantastic organization. I've been working here for about a year, and I look forward to many more years with these lovely individuals.
